# threadle

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
notebook/: demo.ipynb
scripts/: export_demo_html.py  generate_notebook_demo.py
tests/: conftest.py  test_analysis_report.py  test_asyncio_graph.py  test_asyncio_trace.py  test_deadlock.py  test_graph.py  test_lock.py  test_notebook_execute.py  test_notebook_graph_and_cli.py  test_notebook_structure.py  test_notebook_tutorial.py  test_timeline.py
threadle/: __init__.py  _mpl.py  session.py
threadle/analysis/: __init__.py  deadlock.py  graph.py  report.py  snapshot.py
threadle/asyncio_trace/: __init__.py  deadlock_async.py  decorators.py  events.py  gantt.py  graph.py  recorder.py  task_id.py
threadle/cli/: main.py
threadle/core/: __init__.py  state.py  tracker.py  utils.py
threadle/decorators/: __init__.py  trace.py  trace_thread.py
threadle/examples/: __init__.py  deadlock_demo.py
threadle/locks/: __init__.py  tracked_lock.py
threadle/timeline/: __init__.py  events.py  gantt.py  recorder.py
threadle/visualization/: __init__.py  visualize.py
