[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threadle"
version = "0.1.0"
description = "Thread debugging and deadlock detection tool"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["threading", "deadlock", "lock", "visualization", "asyncio", "debugging"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Debuggers",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "networkx>=3.0",
  "matplotlib>=3.8",
  "matplotlib-inline>=0.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "nbformat>=5.10",
  "nbclient>=0.10",
  "ipykernel>=6.29",
  "nbconvert>=7.0",
]
plotly = [
  "plotly>=5.18",
]

[project.scripts]
threadle = "threadle.cli.main:main"

[project.urls]
Homepage = "https://github.com/lucianoramirezs/threadle"
Repository = "https://github.com/lucianoramirezs/threadle"
Issues = "https://github.com/lucianoramirezs/threadle/issues"
Changelog = "https://github.com/lucianoramirezs/threadle/releases"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["threadle", "threadle.*"]
